Navbar z-index fixed

--- a/src/assets/scss/core/layout/_header.scss
+++ b/src/assets/scss/core/layout/_header.scss
@@ -2,7 +2,7 @@
 	position: absolute !important;
 	top: 0;
 	width: 100%;
-	z-index: 10 !important;
+	z-index: 15 !important;
 	background: color-bg(header);
 
 	+ .site-content {
